# streamlit-magic-link

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
example/: main.py
src/: __init__.py  db.py  magiclink.py  mail.py  models.py  utils.py
tests/src/: test_db.py  test_magiclink.py  test_mail.py  test_models.py  test_utils.py
