[project]
name = "streamlit-magic-link"
version = "0.1.0"
description = "Streamlit Magic Link package to handle passwordless authentication"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.4",
    "pymongo>=4.12.1",
    "streamlit>=1.45.0",
    "streamlit-cookies-controller>=0.0.4",
]

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]

[[tool.mypy.overrides]]
module = ["streamlit_cookies_controller.*"]
follow_untyped_imports = true
